# buddy-slab-allocator

./: Cargo.toml  README.md
src/: global_allocator.rs  lib.rs  page_allocator.rs
src/buddy/: buddy_allocator.rs  buddy_block.rs  buddy_set.rs  global_node_pool.rs  mod.rs  pooled_list.rs  stats.rs
src/slab/: mod.rs  slab_byte_allocator.rs  slab_cache.rs  slab_node.rs
tests/: README.md  dma32_pages_test.rs  integration_test.rs
