[package]
name = "buddy-slab-allocator"
version = "0.1.0"
edition = "2021"
authors = ["Song Zhiyong <songzhy30@qq.com>"]
description = "Memory allocator with Buddy and Slab allocation"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"

[features]
default = []
log = ["dep:log"]
tracking = []

[dependencies]
log = { version = "0.4", optional = true }
cfg-if = "1.0"


